@@ -11,6 +11,7 @@ makefiles (most notably GNU Make and Autoconf formats).
     <set var="FORMAT_HAS_MAKE_INSTALL">1</set>
     
     <option name="AR"><default-value>ar</default-value></option>
+    <option name="AROPTIONS"><default-value>rcu</default-value></option>
     <option name="RANLIB"><default-value>ranlib</default-value></option>
 
     <set var="DIRSEP">/</set>
@@ -36,7 +37,6 @@ makefiles (most notably GNU Make and Autoconf formats).
     <set var="UNINSTALL_DATA" overwrite="0">$(RM)</set>
     <set var="UNINSTALL_DIR" overwrite="0">$(RM) -r</set>
 
-    <set var="AROPTIONS">rcu</set>
 
     <set var="__DEFINE_ARG">-D</set>
     <set var="__INCLUDE_ARG">-I</set>
