@@ -23,6 +23,8 @@
   anymore (Francesco Montorsi)
 - fixed dependencies handling in bakefile_gen if fileList() is used
 - autoconf: compatible with autoconf-2.60
+- autoconf: fixed creation of static libraries when using the SunCC
+  compiler (Michael Wetherell)
 
 
 Version 0.2.0
